--- a/html/welthfigs.html
+++ b/html/welthfigs.html
@@ -197,7 +197,7 @@ function start1(opts)
     window.setInterval(figure1,1,xs)
 }
 
-/*
+
 start1({'population':2000,
 	'shares':100,
 	'alpha':0,
@@ -206,11 +206,11 @@ start1({'population':2000,
 	'steps':1000,
 	'minIter':1,
 	'maxIter':1000000,
-	'bound':0,
+	'bound':150,
 	'side':'Lorentz',
 //     	'side':'entropy'
        })
-*/
+
 
 function start3(opts)
 {
@@ -361,7 +361,7 @@ function diffs() {
 	.label('доход =',{'at':[-0.7,0.12]})
 	.label('прибыль-убыток',{'at':[-1.6,0.08]})
 }
-diffs()
+//diffs()
 
 
 /*
