--- a/html/toast.html
+++ b/html/toast.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="../css/styles.css">
     <style>
     .reds {
-	fill:red;
+	fill:white;
     }
     .greens {
-	fill:green;
+	fill:orange;
     }
     .A {
 	fill:darkred;
@@ -33,6 +33,11 @@
 	stroke:blue;
 	stroke-opacity: 0.1;
 	stroke-width: 0.5;
+    }
+    .rect {
+	stroke: black;
+	fill: none;
+	stroke-dasharray: 5,5;
     }
 
 </style>
@@ -283,6 +288,11 @@ function figure7()
 
 function figure8()
 {
+    p2.xRange([1,40000])
+	.yRange([0.45,0.55])
+	.axes({xTickValues:[10000,20000,30000,40000],
+	       xLabel : "количество испытаний",
+	       yLabel : "оценка параметра распределения Бернулли"})
     var n = 1
     var s1 = Bernoulli(0.49).samples(40000).foldList((r,x)=>(r*n+x)/(++n))
     n = 1
@@ -291,13 +301,26 @@ function figure8()
 	.listPlot(s2,{'joined':true,'points':false,'class':'B'})
 }
 
-p2.xRange([1,40000])
-    .yRange([0.45,0.55])
-    .axes({xTickValues:[10000,20000,30000,40000],
-	   xLabel : "количество испытаний",
-	   yLabel : "оценка параметра распределения Бернулли"})
-
 //repeat(20,figure8)
+
+function figure9()
+{
+    p2.xRange([0.01,3])
+	.yRange([0,50])
+	.axes({ yLabel : "угловая скорость (об/сек)",
+		xLabel : "время полёта монетки (сек)"})
+    var g =10
+    var w = n => t => n/t 
+    range(1,200,2)
+	.reversed()
+	.map(n => p2.plot(w(n)  ,{'filled':true,'class':'reds'})
+	     .plot(w(n-1),{'filled':true,'class':'greens'}))
+//    p2.rectangle(20,0.5,20,1.5,{'cornerRadius':10,'class':'rect'})
+//    p2.listPlot([[20,1.5],[40,3],[50,1],[25,0.5],[20,1.5]],{'joined':true,'points':false,'class':'rect'})
+}   
+
+//n == 2 v w/g = w t
+figure9()
 
     </script>
     </body>
