--- a/html/toast.html
+++ b/html/toast.html
@@ -39,12 +39,17 @@
 	fill: none;
 	stroke-dasharray: 5,5;
     }
+    .pdf {
+	fill:darkorange;
+	fill-opacity:0.75;
+	stroke:darkblue;
+    }
 
 </style>
     </head>
     <body>
-    <svg id='fig1' width='0' height='0'></svg>
-    <svg id='fig2' width='500' height='400'></svg>
+    <svg id='fig1' width='300' height='200'></svg>
+    <svg id='fig2' width='400' height='400'></svg>
     <span id="cnv"></span><span id="cnv"></span>
     <script>
     
@@ -145,6 +150,8 @@ World.add(engine.world, [table, pin, toast2, toast1, ground]);
 engine.world.gravity.scale=0.001
 
 var res = new Histogram(1)
+var ws = new Histogram(0.01)
+var vs = new Histogram(0.1)
 var heights = []
 var dh = toastLength/4
 var testsN = 100
@@ -158,8 +165,10 @@ Matter.Events.on(engine, 'collisionStart', function(event) {
         if (pair.bodyA === ground) {
 	    b = pair.bodyB
             res.add(Math.sign(Math.cos(b.angle)))
+	    ws.add(b.angularVelocity)
+	    vs.add(b.velocity.y)
 	    p.cleanPaper();
-	    p.histogram(res,{'type':'PDF'});
+	    p.histogram(ws,{'type':'PDF'});
 	    newToast(b)
 	    if (tests++ > testsN)
 	    {
@@ -182,8 +191,8 @@ Matter.Events.on(engine, 'collisionStart', function(event) {
 });
 
 var p = new Graphics(fig1)
-    .xRange([-2,2])
-    .yRange([0,1])
+    .xRange([0,0.5])
+    .yRange([0,100])
     .axes()
 
 var p2 = new Graphics(fig2,{'class':'lines'})
@@ -237,51 +246,52 @@ function figure3()
 
 function figure4()
 {
-    p2.xRange([0,50])
-	.listPlot(pts2.map(([x,y]) => [x/2,y]))
+    p2.xRange([0,10])
+	.listPlot(datum[0],{'class':'A'})
+	.listPlot(datum[2],{'class':'B'})
     .axes({ xLabel : "высота стола (в бутербродах)",
 	    yLabel : "вероятность падения маслом вниз",
 	    yTickFormat : fmt.percent})
 }
 
+//figure4()
+
 function figure5()
 {
     p2.xRange([0,20])
-	.yRange([0,0.2])
-	.plot(Uniform([3,15]).PDF)
+	.yRange([0,0.15])
+	.plot(Uniform([3,15]).PDF,{'class':'pdf',
+				  'filled':true})
 	.axes({	xLabel : "размеры бутерброда (см)",
 		yLabel : "плотность вероятности"
 		})
 }
 
-function figure5()
-{
-    p2.xRange([0,20])
-	.yRange([0,0.2])
-	.plot(Uniform([3,15]).PDF)
-	.axes({	xLabel : "размеры бутерброда (см)",
-		yLabel : "плотность вероятности"
-		})
-}
+//figure5()
 
 function figure6()
 {
     p2.xRange([0,1])
 	.yRange([0,5])
-	.plot(Gamma(8,25).PDF)
+	.plot(Gamma(8,25).PDF,{'class':'pdf',
+			       'filled':true})
 	.axes({	xLabel : "коэффициент трения",
 		yLabel : "плотность вероятности"
 		})
 }
 
+
+//figure6()
+
 function figure7()
 {
     p2.xRange([0,3])
 	.yRange([0,2])
-	.plot(Exponential(1).PDF)
+	.plot(Exponential(2).PDF,{'class':'pdf',
+				  'filled':true})
 	.axes({	xLabel : "начальная горизотальная скорость (м/с)",
-		yLabel : "плотность вероятности"
-		})
+		yLabel : "плотность вероятности",
+		xTickValues: range(0,3,0.5)})
 }
 
 //figure7()
@@ -305,7 +315,7 @@ function figure8()
 
 function figure9()
 {
-    p2.xRange([0.01,3])
+    p2.xRange([0.01,2])
 	.yRange([0,50])
 	.axes({ yLabel : "угловая скорость (об/сек)",
 		xLabel : "время полёта монетки (сек)"})
@@ -315,8 +325,9 @@ function figure9()
 	.reversed()
 	.map(n => p2.plot(w(n)  ,{'filled':true,'class':'reds'})
 	     .plot(w(n-1),{'filled':true,'class':'greens'}))
-//    p2.rectangle(20,0.5,20,1.5,{'cornerRadius':10,'class':'rect'})
-//    p2.listPlot([[20,1.5],[40,3],[50,1],[25,0.5],[20,1.5]],{'joined':true,'points':false,'class':'rect'})
+    p2.rectangle(0.5,20,0.6,20,{'cornerRadius':2,'class':'rect'})
+    //p2.rectangle(0.1,2,0.8,5,{'cornerRadius':10,'class':'rect'})
+
 }   
 
 //n == 2 v w/g = w t
