--- a/html/toast1.html
+++ b/html/toast1.html
@@ -9,6 +9,7 @@
     <script src='../lib/statistics.js'></script>
     <script src='../lib/graphics.js'></script>
     <script src='../lib/signal.js'></script>
+    <script src='../lib/odesolve.js'></script>
     <script src='./toast.js'></script>
     <script src='./Butter2.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.min.js"></script>
@@ -248,7 +249,7 @@ function figure2()
 	    yTickFormat : fmt.percent})
 }
 
-figure2()
+//figure2()
 
 function figure3()
 {
@@ -321,6 +322,36 @@ var dd=[[2.25,0.32692307692307687],[3.25,1],[4.25,1],[5.25,1],[6.25,0.9230769230
 
 //figure9(50000)
 
+function figure10(n)
+{
+    f = x => 0.5*(1+Math.sign(cos(2.2*sqrt(x))))
+    P = x => 2*range(0,0.5,1/n).map(a => f(a/(1-a)*x)).sum()/n
+    P2 = x => max(0,min(1,6*(P(x)-0.5)+0.5))
+    plt = range(1,10000).map(x => [x-1/2,P2(sqr(x))])
+    p2.xRange([1,1000])
+	.yRange([0,1])
+    //	.xAxisType('log')
+	.gridLines({y:[0.5]})
+    	.listPlot(plt,{'joined':true,'points':false,'class':'line'})
+	.axes({	xLabel : "высота падения (в бутербродах)",
+		yLabel : "вероятность падения маслом вниз"
+		})
+}
+
+//figure10(n)
+
+function figure11() {
+    var Eq = (t,[x,y]) => [y, x*(1-x*x)+0.05*y]
+    var sol1 = ODE.solve(Eq,[0.1,0.1],[0,60.75],0.05)
+    var sol2 = ODE.solve(Eq,[-0.1,-0.1],[0,62.13],0.05)
+    pts = ODE.solution(sol2,[0,1]).reversed().concat(ODE.solution(sol1,[0,1]))
+    p2.xRange([-6,6])
+	.yRange([-6,6])
+	.listPlot(pts,{'joined':true,'points':false})
+	.axes({})
+}
+
+figure11()
 
 </script>
     </body>
