--- a/html/toast1.html
+++ b/html/toast1.html
@@ -26,8 +26,8 @@
 	fill-opacity:0.3;
     }
     .B {
-	fill:darkblue;
-	fill-opacity:0.7;
+	fill:#444;
+	fill-opacity:0.6;
     }
     .line {
 	stroke-width:2;
@@ -57,7 +57,7 @@
     </head>
     <body>
     <svg id='fig1' width='400' height='400'></svg>
-    <svg id='fig2' width='400' height='300'></svg>
+    <svg id='fig2' width='400' height='350'></svg>
     <span id="cnv"></span><span id="cnv"></span>
     <script>
     
@@ -409,8 +409,35 @@ function figure13()
 	       yTickFormat: fmt.int,
 	       xLabel:'число горизонтальных складок',
 	       yLabel:'число вертикальных складок',})
+    p2.image("figures/buter/map.jpg",0,-49)
+    var w0 = 400+24
+    var h0 = 360-25*2
+    var d = sqrt(400*300*0.005)
+    p2.xRange([0,400]).yRange([0,300])
+	.rectangle(0,0,d,h0,{'class':'B'})
+	.rectangle(w0-d,0,d,h0,{'class':'B'})
+	.rectangle(0,0,w0,d,{'class':'B'})
+	.rectangle(0,h0-d,w0,d,{'class':'B'})
+	.rectangle(w0/2-d/2,0,d,h0,{'class':'B'})
+	.rectangle(100,60,d,d,{'class':'B'})
+// <image xlink:href="/path/to/image.jpg" width="100%" height="100%" x="0" y="0" />
+
 }
-figure13()
+//figure13()
+
+function figure14()
+{
+    p2.xRange([0,10]).yRange([0,2.5])
+	.plot(x => exp(-x))
+	.plot(x => exp(x))
+    	.plot(x => 1+1/(1+exp(-2*(x-3))))
+	.label("катастрофа",{at:[1,1.6],angle:80})
+	.label("релаксация",{at:[4,0.2],angle:0})
+	.label("самоорганизация",{at:[6,1.8],angle:0})
+	.axes({})
+}
+figure14()
+
 </script>
     </body>
     </html>
