toast almost done

--- a/html/toast1.html
+++ b/html/toast1.html
@@ -445,7 +445,7 @@ function figure14()
 	.axes({xTickValues:[1],
 	       yTickValues:[1],
 	       xLabel: "время",
-	       yLabel: "обобщённая координата процесса",})
+	       yLabel: "обобщённая координата процесса"})
 }
 figure14()
 
