--- a/html/weatherfigs.html
+++ b/html/weatherfigs.html
@@ -3,13 +3,13 @@
     <head>
     <meta charset='UTF-8'/>
     <script src='../lib/d3.js'></script>
+    <script src='../lib/analysis.js'></script>
     <script src='../lib/functions.js'></script>
     <script src='../lib/tools.js'></script>
     <script src='../lib/matrix.js'></script>
     <script src='../lib/statistics.js'></script>
     <script src='../lib/graphics.js'></script>
     <script src='../lib/signal.js'></script>
-    <script src='../lib/analysis.js'></script>
     <script src='weather.js'></script>
     <link rel="stylesheet" href="../css/styles.css">
     <style>
@@ -17,9 +17,13 @@
 	stroke : navy;
 	stroke-opacity : 0.5;
     }
-    .needles .line {
-	stroke : navy;
-	stroke-opacity : 0.5;
+    .gridLine {
+	stroke : red;
+	stroke-opacity : 0.05;
+    }
+    .point {
+	fill : indianred;
+	fill-opacity : 0.2;
     }
     </style>
     
@@ -103,30 +107,32 @@ function figure2()
 //figure2()
 
 function figure3()
-{
-    lst = data.partition(7)
-	.map(x=> (x.sum()>0&&x[0]==0&&x[1]==0&&x[2]==0&&x[3]==0&&x[6]==0)?1:0)
-    hs = new Histogram()
-	.fromList(lst.runs().mapappend(r => r[0]==0?r:[r.length]))
-  
+{  
     var p1 = new Graphics(fig1)
-	.xRange([0,7])
+	.xRange([1,7])
 	.yRange([0,1])
-	.histogram(hs,{'type':'PDF'})
-	.axes({'xLabel' : "длина цепочки непогожих дней",
-	       'yLabel' : 'доля',
+	.axes({'xLabel' : "k",
+	       'yLabel' : 'функция вероятности',
 	       'xTickValues' : range(1,7),
-	       'yTickFormat' : fmt.percent
+	       'yTickFormat' : fmt.normal
 	      })
-//	.plot(x=>Geometric(1-2/7).PMF(x))
-
-    p1.plot(x => (y=>y+2*sqrt(y*(1-y)/60))(Geometric(3/4).PMF(x+1)),{"class":"bounds"})
-    p1.plot(x => (y=>max(0,y-2*sqrt(y*(1-y)/60)))(Geometric(3/4).PMF(x+1)),{"class":"bounds"})
-    p1.plot(x => Geometric(3/4).PMF(x))
+    var N=60
+    f = Geometric(1-1/4)
+    g = f => f.PMF
+    hist = () => new Histogram().fromDistribution(f,N)
+    ghist = () => {
+	var h = hist()
+	p1.histogram(h,{"type":"PDF","kind":"needles"})
+//	    .gridLines({x:[h.mean]})
+    }
+    repeat(1000,ghist)
+    p1.plot(x => (y=>y+2*sqrt(y*(1-y)/N))(g(f)(x)),{"class":"bounds"})
+    p1.plot(x => (y=>max(0,y-2*sqrt(y*(1-y)/N)))(g(f)(x)),{"class":"bounds"})
+    p1.plot(x => g(f)(x))
 
 }
 
-//figure3()
+figure3()
 
 function figure4()
 {
@@ -148,7 +154,7 @@ function figure4()
 	      })
 }
 
-figure4()
+//figure4()
 
 
 
