--- a/html/happyfigs.html
+++ b/html/happyfigs.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <script src='../lib/d3.js'></script>
+    <script src='../lib/analysis.js'></script>
     <script src='../lib/functions.js'></script>
     <script src='../lib/tools.js'></script>
     <script src='../lib/matrix.js'></script>
@@ -717,12 +718,120 @@ function queueLor()
 
 
 //queueLor()
-
+/*
 d = Geometric(0.15).samples(10000)
 var h = new Histogram().fromList(d)
 new Graphics(fig1)
     h.QQPlot(Geometric)
+*/
 
+function leela()
+{
+    var jumps = {
+	10:23,
+	16:4,
+	61:3,
+	20:32,
+	22:60,
+	24:7,
+	27:41,
+	28:50,
+	29:6,
+	37:66,
+	45:67,
+	46:62,
+	52:35,
+	54:68,
+	55:2,
+	61:3,
+	63:13,
+	72:51,
+	68:1,
+    }
+    var m
+    function move() {return randomInteger(6)()+1}
+    function step(s)
+    {
+	if (jumps[s]) return jumps[s]	
+	m = move()
+	if (m == 6) m += move()
+	if (s > 60) m = min(m,72-s)
+	return s+=m
+    }
+    return step
+}
+
+
+function leela1()
+{
+    var step = leela()
+    hs.add(nestWhileList(step,1,s=>s!=68,200).length)
+    p1.cleanPaper().histogram(hs,{'type':'PDF'})
+}
+
+/*
+var hs = new Histogram(1)
+var p1 = new Graphics(fig1)
+    .xRange([0,200])
+    .yRange([0,0.05])
+    .axes({})
+
+start1 = () => window.setInterval(leela1,1)
+*/
+
+function leela2()
+{
+    hs.add(s=step(s))
+    p1.cleanPaper().histogram(hs,{'type':'PDF'})
+}
+/*
+p1 = new Graphics(fig1)
+    .xRange([0,72])
+    .yRange([0,0.05])
+    .axes({})
+var step = leela()
+var s=1
+window.setInterval(leela2,1)
+*/
+
+function leela3(n)
+{
+    n = min(n, 200)
+    return cycles => {
+	var step = leela()
+	var run = nestList(step,1,n)
+	var rots = nestList(l => l.rotate(),run,n-1).tail()
+	var ls = rots.map(r => run.zipWith(r,(x,y)=>x==y?[1,x]:0))
+	    .mapappend(x=>x)
+	    .splitOn(0)
+	    .filter(x => x.length>3)
+	    .map(x=>x.map(snd).toString())
+	ls.forEach(c => addTo(cycles, c.toString()))
+	return cycles
+    }
+}
+
+function addTo(c,x)
+{
+    if (c[x])
+	c[x]++
+    else
+	c[x]=1
+}
+function leela4(n,m)
+{
+    var res = [], cs = nest(leela3(n),{},m)
+    for(var b in cs)
+	if (cs[b]>4)
+	    res.push([cs[b],b])
+    len = s => s.split(",").length
+    var res = {
+	'total':res.map(fst).sum(),
+	'frequent':res.sorted((x,y)=>Number(y[0]) - Number(x[0])).take(10),
+	'longest':res.sorted((x,y)=>len(y[1]) - len(x[1])).take(10)
+    }
+    
+}
 
 </script>
   </body>
