--- a/html/happyfigs.html
+++ b/html/happyfigs.html
@@ -69,7 +69,18 @@
     }
     .leela {
 	stroke : navy;
-	stroke-opacity:0.02;
+	stroke-opacity:0.01;
+	stroke-width:0.3;
+    }
+    .matrix {
+	fill:navy;
+    }
+    .cycles .bar {
+	fill:darkred;
+	fill-opacity: 0.7;
+    }
+    .cycles .label {
+	font-family:times;
     }
 </style>
   </head>
@@ -750,35 +761,63 @@ function leela()
 	61:3,
 	63:13,
 	72:51,
-	68:1,
+	68:1
     }
     var m
     function move() {return randomInteger(6)()+1}
     function step(s)
     {
-	if (jumps[s]) return jumps[s]	
+	if (jumps[s]) return jumps[s]
 	m = move()
 	if (m == 6) m += move()
 	if (s > 60) m = min(m,72-s)
-	return s+=m
+	s+=m
+	return  s//jumps[s] || s
     }
     return step
 }
 
+function matrix()
+{
+    var step = leela(),n = 10000
+    function joins(c)
+    {
+	return new Histogram().fromList(range(0,n).map(() => step(c)))
+    }
+    hs = range(1,73).map(joins)
+    var m = hs.map(h => range(1,73).map(x => h.data[x+0.5]/n||0))
+    p1 = new Graphics(fig1,{'class':'matrix'})
+	.xRange([1,73])
+	.yRange([1,73])
+	.axes({xLabel:"",yLabel:""})
+    function drawCell(x,y,c)
+    {
+	if (c > 0)
+	    p1.rectangle(x+1,72-y,1,1,{'opacity':sqrt(c)})
+    }
+    m.forEach((r,y) => r.forEach((c,x) => drawCell(x,y,c)))
+    
+}
 
+//matrix()
+
+// распределение длительности игры
 function leela1()
 {
     var step = leela()
-    hs.add(nestWhileList(step,1,s=>s!=68,200).length)
+    hs.add(nestWhileList(step,1,s=>s!=68,250).length)
     p1.cleanPaper().histogram(hs,{'type':'PDF'})
 }
-
 /*
-var hs = new Histogram(1)
+var f = Exponential(1/54)
+var hs = new Histogram(5)
 var p1 = new Graphics(fig1)
-    .xRange([0,200])
-    .yRange([0,0.05])
-    .axes({})
+    .xRange([0,250])
+    .yRange([0,0.025])
+    .axes({xLabel:"длительнось партии в шагах",
+	   yLabel:"распределение вероятности",
+	   yTickFormat:fmt.percent,
+	   yTicks:3})
 
 window.setInterval(leela1,1)
 */
@@ -791,21 +830,29 @@ function leela2()
 /*
 var hs = new Histogram(1)
 p1 = new Graphics(fig1)
-    .xRange([0,100])
+    .xRange([1,73])
     .yRange([0,0.05])
-    .axes({})
+    .axes({xLabel:"номер клетки",
+	   yLabel:"вероятность",
+	   yTickFormat:fmt.percent,
+	   yTicks:5})
 var step = leela()
 var s=1
 window.setInterval(leela2,1)
 */
 
+function game(n)
+{
+    return nestWhileList(leela(),1,s=>s!=68,n||200)
+}
+
 function leela3(n)
 {
-    n = min(n, 200)
+    n = min(n, 300)
     return cycles => {
 	var step = leela()
-	var run = nestList(step,1,n)
-	var rots = nestList(l => l.rotate(),run,n-1).tail()
+	var run = game(n)
+	var rots = nestList(l => l.rotate(),run.tail(),n-2).tail()
 	var ls = rots.map(r => run.zipWith(r,(x,y)=>x==y?[1,x]:0))
 	    .mapappend(x=>x)
 	    .splitOn(0)
@@ -827,23 +874,31 @@ function leela4(n,m)
 {
     var res = [], cs = nest(leela3(n),{},m)
     for(var b in cs)
-	if (cs[b]>4)
+	if (cs[b]>50)
 	    res.push([cs[b],b])
     len = s => s.split(",").length
     cycles = {
 	'raw':res,
 	'total':res.map(fst).sum(),
-	'frequent':res.sorted((x,y)=>Number(y[0]) - Number(x[0])).take(20),
-	'longest':res.sorted((x,y)=>len(y[1]) - len(x[1])).take(20)
+	'frequent':res.sorted((x,y)=>Number(y[0]) - Number(x[0])).take(10),
+	'longest':res.sorted((x,y)=>len(y[1]) - len(x[1])).take(10)
     }
-    var pts=cycles.raw.map(x => [x[0]/cycles.total,len(x[1])])
-    new Graphics(fig1)
-	.xRange([3/cycles.total,1])
-	.xAxisType('log')
+    var N = cycles.total
+    var p1 = new Graphics(fig1,{'class':'cycles'})
+	.xRange([0,0.5])
 	.yRange([0,10])
-	.listPlot(pts)
-	.axes({})
+	.axes({xLabel:"вероятность цикла в партии",
+	       xTicks : 5,
+	       xTickFormat : fmt.percent,
+	       yAxis : false})
+    cycles.frequent
+	.forEach(([f,c],i) =>
+		 p1.rectangle(0,9-i+0.1,f/m,0.8,{'class':'bar'})
+		 .label(c.replace(/,/g,'→'),{'at':[f/m+0.01,9-i+0.4]}))
+
 }
+
+leela4(300,2000)
 
 function cell(x){
     r = ceil(x/9)
@@ -863,22 +918,24 @@ function leela5(n,how)
     new Graphics(fig1,{'class':'leela'})
 	.xRange([0,10])
 	.yRange([0,10])
-	.listPlot(pts.map(how),{'joined':true})
+	.listPlot(pts.map(how),{'joined':true,'points':false})
     
 }
+//leela5(100000,circ)
+
 function leela6(n,m,how)
 {
     how = how||circ
     var res = [], cs = nest(leela3(n),{},m)
     for(var b in cs)
-	if (cs[b]>4)
+	if (cs[b]>20)
 	    res.push([cs[b],b])
     len = s => s.split(",").length
     cycles = {
 	'raw':res,
 	'total':res.map(fst).sum(),
-	'frequent':res.sorted((x,y)=>Number(y[0]) - Number(x[0])).take(2),
-	'longest':res.sorted((x,y)=>len(y[1]) - len(x[1])).take(20)
+	'frequent':res.sorted((x,y)=>Number(y[0]) - Number(x[0])).take(10),
+	'longest':res.sorted((x,y)=>len(y[1]) - len(x[1])).take(10)
     }
     var pts=cycles.frequent.map(c => c[1].split(",").map(Number))
     var p = new Graphics(fig1,{'class':'leela'})
@@ -887,6 +944,8 @@ function leela6(n,m,how)
 
     pts.forEach(ps=> p.listPlot(ps.close().map(how),{'joined':true}))
 }
+
+//leela6(200,1000,cell)
 </script>
   </body>
 </html>
