--- a/html/normalfigs.html
+++ b/html/normalfigs.html
@@ -42,14 +42,23 @@
 	fill:orange;
 	fill-opacity:0.2;
     }
+    .angular .line {
+	fill:darkorange;
+	stroke:red
+    }
+    .gridLine {
+	stroke:navy;
+	stroke-opacity:0.75;
+    }
 </style>
   </head>
     <body>
-    <svg id='fig1' width='500' height='500'></svg>
+    <svg id='fig1' width='400' height='500'></svg>
+    <svg id='fig2' width='500' height='500'></svg>
     <script>
 
-
 var fig1 = d3.select("#fig1")
+var fig2 = d3.select("#fig2")
 
 function normalFig1()
 {
@@ -255,6 +264,56 @@ function Cycling(distr,opts)
 //var gam = 2
 //Cycling({'PDF': x => 1/(pi*gam)/(1+(x/gam)**2)},{'winding':1000,'rmax':0.25})
 //Cycling(Pareto(1,1/10),{'winding':100})
-</script>
+
+
+function circhist()
+{
+    h = new Histogram(1).fromList(Gamma(13,0.6)
+				  .samples(1000)
+				  .map(x => Math.round(x) % 24)
+				 )
+    //h = new Histogram().fromMap(range(1,20))
+    new Graphics(fig1)
+	.xRange([0,24])
+	.yRange([0,0.1])
+	.histogram(h,{'type':'PDF'})
+	.axes({xLabel:"время суток (час)",
+	       yLabel:"частота обращения в полицию"})
+	.gridLines({x:[h.mean]})
+//	.label("среднее арифметическое",{at:[h.mean-1/2,0.04],angle:90})
+
+
+    mx = 0
+    my = 0
+    for(d in h.data)
+    {
+	mx += cos(d)*h.data[d]
+	my += sin(d)*h.data[d]
+    }
+    m = pi+Math.atan(my/mx)
+    var a = 0.08    
+    var p = new Graphics(fig2)
+	.xRange([-0.1,0.1])
+	.yRange([-0.1,0.1])
+	.polarPlot(a => h.PDF(((2*pi-a+pi/2)/(2*pi)*24) % 24),
+		   {'class':"angular",
+		    'plotPoints':400,
+		    'domain':[0,2*pi]})
+	.line([[0,0],[a*cos(m),a*sin(m)]],{'class':"gridLine"})
+
+    range(0,a+a/10,a/10)
+	.map(r => p.polarPlot(x=>r,{'class':'polarMesh'}))
+    range(0,2*pi,pi/12)
+	.map(phi => p.line([[0,0],[a*sin(phi),a*cos(phi)]],{'class':'polarMesh'}))
+        
+    range(1,25)
+	.map(x => p.label(x,{'at':[1.09*a*cos(-x/12*pi+pi/2+pi/24)-0.005,1.09*a*sin(-x/12*pi+pi/2+pi/24)-0.003]}))
+    
+}
+
+circhist()
+
+
+    </script>
   </body>
 </html>
